2005-10-19  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, Http.cc: check ReconnectAllowed() after host name
	  resolving.

2005-10-18  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc: (get_lftp_home) return NULL if LFTP_HOME is empty.
	* history.cc, bookmark.cc, lftp_rl.c: don't read/write anything to
	  user-specific files if get_lftp_home returns NULL.
	* FileAccess.cc: swap default SameSiteAs and SameLocationAs, this
	  fixes loop in `open file:/path'.
	* SMTask.cc: (CollectGarbage) don't protect scan->next if it is NULL.

2005-10-18  Alexander V. Lukyanov <lav@yars.free.net>

	* SMTask.cc, SMTask.h: do delete the task in Delete if not running;
	  (CollectGarbage) protect next element in chain when deleting one task.
	* Job.cc: (BuryDoneJobs) avoid looping caused by Delete not
	  always deleting the task.
	* misc.cc, misc.h: (get_lftp_home) new function.
	* bookmark.cc, commands.cc, history.cc, import-ncftp, import-netscape,
	  lftp.cc, lftp_rl.c: use it (based on patch by Nikolai Weibull
	  <mailing-lists.lftp-development@rawuncut.elitemail.org>).

2005-10-17  Alexander V. Lukyanov <lav@yars.free.net>

	* SMTask.cc, SMTask.h: simplify Schedule; make garbage collection
	  a separate function; don't delete the task in Delete, just mark
	  it for GC.
	* ProcWait.cc: don't rely on Delete to delete the task, just mark
	  it for deletion.

2005-10-17  Paul TBBle Hampson <Paul.Hampson@anu.edu.au>

	* lftp.cc: add missing initialization for add_newline.

2005-10-06  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: use xfer:destination-directory only for get/mget,
	  not for put/mput.

2005-10-06  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc: fixed another coredump with KillAll/Schedule.

2005-10-05  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc, Job.h: fixed core dump with KillAll.
	* HttpDir.cc: fixed prefix path removing.

2005-10-01  Alexander V. Lukyanov <lav@yars.free.net>
